# eo2cube-tools

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml
data/vector/: training_2011.dbf  training_2011.shp  training_2011.shx
docs/source/: conf.py  index.rst
eo2cube_tools/: ClassificationToolsImproved.py  breakpoints.py  classification.py  clip_xr2gpd.py  cloud_mask.py  dask.py  display_map_polygons.py  extract.py  io.py  map.py  mask.py  ml.py  mosaic.py  plot.py  spatial.py  spatialextent.py  spectralindices.py  timerange.py  ts_animation.py  unpacks2scl.py  xrContainsgpd.py
eo2cube_tools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_eo2cube_tools.py
