[tool.poetry]
name = "eo2cube_tools"
version = "0.1.0"
description = ""
authors = ["Steve <steven.hill@uni-wuerzburg.de>"]

[tool.poetry.dependencies]
python = "^3.8"
xarray = "^0.16.2"
rasterio = "^1.2.0"
pandas = "^1.2.1"
geopandas = "^0.8.2"
folium = "^0.12.1"
dask = "^2021.1.1"
holoviews = "^1.14.1"
bokeh = "^2.2.3"
datashader = "^0.12.0"
panel = "^0.11.1"
odc-algo = "^0.1.dev900+g027e8f2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "odc"
url = "https://packages.dea.ga.gov.au"
secondary = true
