[tool.poetry]
name = "eo2cube_tools"
version = "0.1.0"
description = ""
authors = ["Steve <steven.hill@uni-wuerzburg.de>"]

[tool.poetry.dependencies]
python = "^3.8"
xarray = "^0.18.*"
rasterio = "^1.2.*"
pandas = "^1.2.*"
geopandas = "^0.9.*"
folium = "^0.12.1"
dask = "^2021.*"
holoviews = "^1.14.*"
bokeh = "^2.2.*"
datashader = "^0.12.*"
panel = "^0.11.*"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

